# GenAI_Master_Samples

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  api.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  finance_agent.py  gemini_agent.py  knowledge_agent.py  mcp_agent.py  ollama_agent.py  openai_agent.py  simple_agent.py  websearch_agent.py
core/: memory.py
knowledge_base/: __init__.py  document_loader.py  vector_store.py
static/: chat_sse_demo.html
templates/: __init__.py  prompts.py
tools/: __init__.py  calculator.py  crypto.py  datetime_tool.py  geocoding.py  rag_tool.py  stocks.py  web_search.py  wikipedia.py
